--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <meta name="referrer" content="strict-origin-when-cross-origin" />
 
     <!-- Primary Meta Tags -->
-    <title>World Monitor - Global Situation with AI Insights</title>
-    <meta name="title" content="World Monitor - Global Situation with AI Insights" />
-    <meta name="description" content="AI-powered real-time global intelligence dashboard with live news, markets, military tracking, infrastructure monitoring, and geopolitical data. OSINT in one view." />
+    <title>WW3 Monitor - Conflict & War Intelligence Dashboard</title>
+    <meta name="title" content="WW3 Monitor - Conflict & War Intelligence Dashboard" />
+    <meta name="description" content="Real-time conflict intelligence dashboard focused on wars, military activity, escalation signals, and geopolitical security updates." />
     <meta name="keywords" content="AI intelligence, AI-powered dashboard, global intelligence, geopolitical dashboard, world news, market data, military bases, nuclear facilities, undersea cables, conflict zones, real-time monitoring, situation awareness, OSINT, flight tracking, AIS ships, earthquake monitor, protest tracker, power outages, oil prices, government spending, polymarket predictions" />
     <meta name="author" content="Elie Habib" />
     <meta name="theme-color" content="#0a0f0a" />
