style: apply globe-art ww3 palette across dark theme

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta name="description" content="Real-time conflict intelligence dashboard focused on wars, military activity, escalation signals, and geopolitical security updates." />
     <meta name="keywords" content="AI intelligence, AI-powered dashboard, global intelligence, geopolitical dashboard, world news, market data, military bases, nuclear facilities, undersea cables, conflict zones, real-time monitoring, situation awareness, OSINT, flight tracking, AIS ships, earthquake monitor, protest tracker, power outages, oil prices, government spending, polymarket predictions" />
     <meta name="author" content="Elie Habib" />
-    <meta name="theme-color" content="#0a0f0a" />
+    <meta name="theme-color" content="#050913" />
     <meta name="robots" content="index, follow" />
     <link rel="canonical" href="https://worldmonitor.app/" />
 
